--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "http-post": "^0.1.1",
-    "jquery": "^2.1.1"
+    "jquery": "^2.1.1",
+    "socket.io-client": "^1.2.1"
   }
 }
